--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 * {
@@ -25,3 +28,17 @@ img {
   max-width: 100%;
   display: block;
 }
+
+@tailwind base;
+
+/* Write your own custom base styles here */
+
+/* Start purging... */
+@tailwind components;
+/* Stop purging. */
+
+/* Start purging... */
+@tailwind utilities;
+/* Stop purging. */
+
+/* Your own custom utilities */
